--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <h1>Hello world!</h1>
-    </body>
+<head>
+<title>Title of the document</title>
+</head>
+
+<body>
+The content of the document......
+</body>
+
 </html>
